- Fixed options jumping around in index edit - Fixed space before VFS in footer text

--- a/branches/genmod2.0_develop/themes/standard/style.css
+++ b/branches/genmod2.0_develop/themes/standard/style.css
@@ -1231,7 +1231,6 @@ select {
      margin-top: 55px;
 }
 #index_edit_left {
-     width: 25%; 
      float: left;
      margin-top: 5px;
 }
@@ -1241,7 +1240,6 @@ select {
      margin-top: 55px;
 }
 #index_edit_content {
-	width: 25%;
      margin-left: auto;
      margin-right: auto;
      margin-top: 5px;
@@ -1252,7 +1250,6 @@ select {
      margin-top: 55px;
 }
 #index_edit_right {  
-     width: 25%; 
      float: right;
      margin-top: 5px;
 }
